fix faq page layout on mobile

--- a/project/static/css/faq.css
+++ b/project/static/css/faq.css
@@ -15,10 +15,6 @@ html {
 	/* background-color: rgb(198, 198, 198); */
 }
 
-#container {
-	margin: 0;
-}
-
 .section h3 {
 	font-size: 23px;
 	margin-bottom: 0;
