--- a/project/static/css/style.css
+++ b/project/static/css/style.css
@@ -1,9 +1,3 @@
-#container {
-	margin-left: 30%;
-	display: inline-block;
-	width :40%;
-	float: left;
-}
 #join {
 	width:40%;
 }
